MAINTAINERS: Add myself as collaborator to TI K3
PHYTEC has support for the TI AM62x M4/A53 cores and we
plan to extend this support further in the future.

Signed-off-by: Daniel Schultz <d.schultz@phytec.de>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3632,6 +3632,7 @@ TI K3 Platforms:
     - vaishnavachath
   collaborators:
     - gramsay0
+    - dnltz
   files:
     - boards/phytec/*am62*/
     - boards/ti/*am62*/
