MAINTAINERS: Update Renesas maintainers
Update maintainers for Renesas code to Renesas employees.

Add @ioannis-karachalios as maintainer for Renesas SmartBond code.
Add @KhiemNguyenT as maintainer for Renesas HAL.

Signed-off-by: Andrzej Kaczmarek <andrzej.kaczmarek@codecoup.pl>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3482,6 +3482,7 @@ nRF Platforms:
 Renesas SmartBond Platforms:
   status: maintained
   maintainers:
+    - ioannis-karachalios
     - andrzej-kaczmarek
     - blauret
   files:
@@ -4344,6 +4345,7 @@ West:
 "West project: hal_renesas":
   status: maintained
   maintainers:
+    - KhiemNguyenT
     - andrzej-kaczmarek
   files: []
   labels:
