--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1232,6 +1232,7 @@ Release Notes:
   status: odd fixes
   collaborators:
     - decsny
+    - lmajewski
   files:
     - drivers/ethernet/
     - include/zephyr/dt-bindings/ethernet/
