[nrf noup] boards: nordic: nrf54h20dk: Add aliases for RESETINFO
Each local RESETINFO instance can be used in samples.
Applied as `noup` because of conflicts.

Signed-off-by: Grzegorz Swiderski <grzegorz.swiderski@nordicsemi.no>

--- a/boards/nordic/nrf54h20dk/nrf54h20dk_nrf54h20_cpurad.dts
+++ b/boards/nordic/nrf54h20dk/nrf54h20dk_nrf54h20_cpurad.dts
@@ -33,6 +33,10 @@
 		compatible = "nordic,entropy-prng";
 		status = "okay";
 	};
+
+	aliases {
+		resetinfo = &cpurad_resetinfo;
+	};
 };
 
 &shared_ram3x_region {
