MAINTAINERS: add nRF platform collaborators
Add new collaborators to nRF platform.

Signed-off-by: Marcin Szymczyk <marcin.szymczyk@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3461,6 +3461,12 @@ nRF Platforms:
   status: maintained
   maintainers:
     - anangl
+  collaborators:
+    - jaz1-nordic
+    - kl-cruz
+    - magp-nordic
+    - masz-nordic
+    - nika-nordic
   files:
     - boards/nordic/
     - drivers/*/*nrf*.c
