MAINTAINERS: update Ambiq maintainers
Removing ourselves from maintainers list as we currently don't have
bandwidth to maintain this platform family.

Signed-off-by: Filip Kokosinski <fkokosinski@antmicro.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -237,12 +237,8 @@ MIPS arch:
     - arch.mips
 
 Ambiq Platforms:
-  status: maintained
-  maintainers:
-    - fkokosinski
+  status: odd fixes
   collaborators:
-    - tgorochowik
-    - msobkowski
     - aaronyegx
     - RichardSWheatley
   files:
@@ -4194,12 +4190,8 @@ West:
     - "platform: Altera"
 
 "West project: hal_ambiq":
-  status: maintained
-  maintainers:
-    - fkokosinski
+  status: odd fixes
   collaborators:
-    - tgorochowik
-    - msobkowski
     - aaronyegx
     - RichardSWheatley
   files:
