--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -2409,6 +2409,8 @@ Mbed TLS:
   maintainers:
     - d3zd3z
     - ceolin
+  collaborators:
+    - ithinuel
   files:
     - tests/crypto/mbedtls/
     - doc/services/crypto/
@@ -3820,6 +3822,7 @@ TF-M Integration:
     - d3zd3z
   collaborators:
     - SebastianBoe
+    - ithinuel
   files:
     - samples/tfm_integration/
     - modules/trusted-firmware-m/
@@ -4508,6 +4511,8 @@ West:
   maintainers:
     - d3zd3z
     - ceolin
+  collaborators:
+    - ithinuel
   files:
     - modules/mbedtls/
   labels:
@@ -4674,6 +4679,7 @@ West:
     - d3zd3z
   collaborators:
     - SebastianBoe
+    - ithinuel
   files:
     - modules/trusted-firmware-m/
   labels:
@@ -4685,6 +4691,7 @@ West:
     - d3zd3z
   collaborators:
     - SebastianBoe
+    - ithinuel
   files: []
   labels:
     - "area: TF-M"
@@ -4696,6 +4703,7 @@ West:
     - sgrrzhf
   collaborators:
     - carlocaione
+    - ithinuel
   files:
     - modules/trusted-firmware-a/
   labels:
@@ -4707,6 +4715,7 @@ West:
     - d3zd3z
   collaborators:
     - SebastianBoe
+    - ithinuel
   files: []
   labels:
     - "area: TF-M"
