drivers: sensor: Add driver for nRF temperature sensor accessed via nrfs
Add driver, together with the corresponding dts binding and node in
the nRF54H20 SoC definiton, for the nRF temperature sensor that cannot
be accessed directly but only through nRF Services (nrfs) layer.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/dts/common/nordic/nrf54h20.dtsi
+++ b/dts/common/nordic/nrf54h20.dtsi
@@ -1080,4 +1080,9 @@
 			#address-cells = <1>;
 		};
 	};
+
+	temp_nrfs: temp {
+		compatible = "nordic,nrf-temp-nrfs";
+		status = "disabled";
+	};
 };
