--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1322,6 +1322,9 @@ Release Notes:
   status: maintained
   maintainers:
     - bjarki-trackunit
+  collaborators:
+    - tomi-font
+    - fabiobaltieri
   files:
     - doc/hardware/peripherals/gnss.rst
     - drivers/gnss/
