--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1819,6 +1819,7 @@ Release Notes:
     - teburd
     - yperess
     - tristan-google
+    - ubieda
   files:
     - drivers/sensor/
     - include/zephyr/drivers/sensor.h
