--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4351,6 +4351,9 @@ West:
   status: maintained
   maintainers:
     - KhiemNguyenT
+    - ioannis-karachalios
+  collaborators:
+    - blauret
     - andrzej-kaczmarek
   files: []
   labels:
