MAINTAINERS: add butok as "NXP Platforms (MCU)" collaborator
Add myself as "NXP Platforms (MCU)" collaborator.

Signed-off-by: Andrej Butok <andrey.butok@nxp.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3348,6 +3348,7 @@ NXP Platforms (MCU):
     - yvanderv
     - EmilioCBen
     - decsny
+    - butok
   files:
     - boards/nxp/mimxrt*/
     - boards/nxp/frdm*/
